# awesome-casual-inference

./: .gitignore  CLAUDE.md  DEEP_LEARNING_PAPERS.md  LICENSE  Makefile  QUICKSTART_TREATMENT_EFFECT.md  README.md  TREATMENT_EFFECT_LAB_IMPLEMENTATION.md  app.py  package.json  requirements.txt  test_challenges.py
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/routes/: __init__.py  part0_foundation.py  part1_experimentation.py  part2_observational.py  part3_quasi_experiments.py  part4_cate_uplift.py  part5_deep_learning.py  part6_marketing.py  part7_advanced.py
backend/app/schemas/: __init__.py  common.py
backend/domains/: __init__.py
backend/domains/datasets/: QUICKSTART.md  __init__.py  lalonde.py  synthetic.py
backend/domains/part0_foundation/: README.md  __init__.py  api.py  bias_types.py  causal_dag.py  identification_strategies.py  potential_outcomes.py  utils.py
backend/domains/part1_experimentation/: README.md  __init__.py  ab_testing.py  api.py  cuped.py  long_term_effects.py  multi_armed_bandits.py  network_effects.py  stratified_analysis.py  switchback.py  utils.py
backend/domains/part2_observational/: __init__.py  api.py  doubly_robust.py  matching.py  propensity_score.py  sensitivity_analysis.py  utils.py  weighting.py
backend/domains/part3_quasi_experiments/: __init__.py  api.py  did.py  instrumental_variables.py  rdd.py  synthetic_control.py  utils.py
backend/domains/part4_cate_uplift/: README.md  __init__.py  api.py  cate_visualization.py  causal_forest.py  meta_learners.py  uplift_evaluation.py  (+2 more)
(+315 files in other folders)
